Update main-content as a mixin; Fix search in header on mobile

--- a/themes/custom/fate/sass/partials/design/_search.scss
+++ b/themes/custom/fate/sass/partials/design/_search.scss
@@ -36,3 +36,7 @@
 .search-submit {
   font-family: 'icomoon';
 }
+
+.search-results {
+  padding-left: 0;
+}
